using ejs and connect-assets

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": "true",
   "dependencies": {
     "express": "*",
-    "mongoose": "*"
+    "mongoose": "*",
+    "connect-assets": "*",
+    "ejs": "*"
   }
 }
